# upstox-mcp-server

./: .gitignore  README.md  main.py  pyproject.toml
src/auth/: __init__.py  auth_manager.py
src/marketdata/: __init__.py  marketdata.py
src/mcpserver/: __main__.py  server.py
src/models/: __init__.py  instruments.py  marketdata.py  tradingconstants.py
src/utils/: __init__.py  instruments.csv  instruments.py
